2008-05-08  David Athay  <ko2fan@gmail.com>

	* src/net/chathandler.cpp: Fixed initialisation in case.

2008-05-08  Philipp Sehmisch  <tmw@crushnet.org>

	* src/net/chathandler.cpp: Made say messages from being ID 0 display as
	messages from server. Made messages from unknown beings display as from
	"Unknown" instead of "John Doe".

2008-05-05  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/gui/chat.h, src/gui/chat.cpp: Only update the size of chat
	window widgets when it is resized.

2008-04-29  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/localplayer.cpp, src/gui/changeemaildialog.h, src/localplayer.h:
	Name structs with capital, just like classes.

2008-04-28  David Athay  <ko2fan@gmail.com>

	* src/gui/partywindow.h, src/gui/partywindow.cpp,
	src/net/partyhandler.cpp, src/net/protocol.h,
	src/net/chatserver/party.cpp, tmw.cbp: Added party invite dialog.
	* src/localplayer.cpp, src/localplayer.h, src/gui/skills.cpp,
	src/gui/skills.h: Skills patch by roderic, mantis id=209.

2008-04-26  Yohann Ferreira  <bertram@cegetel.net>

	* src/CMakeLists.txt, src/Makefile.am, src/gui/char_select.h,
	src/gui/char_select.cpp, src/gui/changeemaildialog.h,
	src/gui/changeemaildialog.cpp, src/main.h, src/main.cpp,
	src/net/protocol.h, src/net/loginhandler.cpp, src/logindata.h,
	src/gui/changepassworddialog.cpp: Added client-side Email address
	change.
	* src/net/accountserver/account.h, src/net/accountserver/account.cpp,
	src/net/protocol.h: Made it work nicely with the server.
	* src/protocol.h: Generic return values were incomplete client-side.
	* src/gui/progressbar.h, src/gui/progressbar.cpp: Made smooth color
	changing and smooth progress optional.

2008-04-25  David Athay  <ko2fan@gmail.com>

	* src/game.cpp, src/gui/partywindow.h, src/gui/partywindow.cpp,
	tmw.cbp: Added party window, updated codeblocks project file.

2008-04-23  David Athay  <ko2fan@gmail.com>

	* src/gui/guildwindow.h, src/net/partyhandler.h,
	src/net/guildhandler.h, src/net/partyhandler.cpp,