@@ -75,6 +75,7 @@ Setup_Keyboard::Setup_Keyboard():
 {
     keyboard.setSetupKeyboard(this);
     setOpaque(false);
+    setDimension(gcn::Rectangle(0, 0, 250, 200));
 
     refreshKeys();
 
