@@ -128,6 +128,7 @@ Setup_Video::Setup_Video():
     mOverlayDetailField(new gcn::Label(""))
 {
     setOpaque(false);
+    setDimension(gcn::Rectangle(0, 0, 250, 200));
 
     ScrollArea *scrollArea = new ScrollArea(mModeList);
     gcn::Label *alphaLabel = new gcn::Label(_("Gui opacity"));
