@@ -65,7 +65,6 @@ class TabbedArea : public gcn::TabbedArea
          * Overload the remove tab function as its broken in guichan 0.8
          */
         void removeTab(gcn::Tab *tab);
-
 };
 
 #endif
