@@ -46,10 +46,12 @@
 				<Option output="tmw" prefix_auto="1" extension_auto="1" />
 				<Option type="0" />
 				<Option compiler="gcc" />
+				<Option parameters="-d /home/dathay/Programming/tmwdata/trunk" />
 				<Compiler>
 					<Add option="-W" />
 					<Add option="-g" />
 					<Add option="`sdl-config --cflags`" />
+					<Add option="-DUSE_OPENGL" />
 				</Compiler>
 				<Linker>
 					<Add option="`sdl-config --libs`" />
@@ -58,6 +60,7 @@
 					<Add library="SDL_mixer" />
 					<Add library="SDL_ttf" />
 					<Add library="SDL_image" />
+					<Add library="GL" />
 					<Add library="physfs" />
 					<Add library="enet" />
 					<Add library="libxml2" />
@@ -358,10 +361,6 @@
 		</Unit>
 		<Unit filename="src/gui/status.cpp" />
 		<Unit filename="src/gui/status.h">
-			<Option target="default" />
-		</Unit>
-		<Unit filename="src/gui/tabbedcontainer.cpp" />
-		<Unit filename="src/gui/tabbedcontainer.h">
 			<Option target="default" />
 		</Unit>
 		<Unit filename="src/gui/textbox.cpp" />
